# rizky-pratama-tan-api

./: .env.example  .gitignore  Cargo.toml  Rizky Pratama Tan API.bat
resources/templates/: index.html
src/: lib.rs  main.rs
src/core/: mod.rs  schedulers.rs  services.rs
src/core/authentication/: enums.rs  services.rs
src/core/base/: enums.rs  models.rs  services.rs
src/core/database/: models.rs  services.rs
src/core/email/: services.rs
src/core/encryption/: rsa.rs
src/integration/: mod.rs  services.rs
src/integration/ai/: models.rs  services.rs
src/integration/discord/: services.rs
src/integration/eodhd/: models.rs  services.rs
src/integration/massive/: enums.rs  mod.rs  models.rs  services.rs
src/site/: models.rs  routes.rs  services.rs
src/trading/: mod.rs  routes.rs
src/trading/asset/: enums.rs  mod.rs  models.rs  repositories.rs  routes.rs  services.rs
src/trading/data/: enums.rs  mod.rs  models.rs  repositories.rs  services.rs
src/trading/data/status/: enums.rs  mod.rs  models.rs  repositories.rs  services.rs
src/user/: enums.rs  mod.rs  models.rs  repositories.rs
src/user/log/: enums.rs  mod.rs  models.rs  repositories.rs
