[package]
name = "rizky-pratama-tan-api"
version = "1.0.0"
edition = "2024"

[dependencies]
actix-cors = "0.7.1"
actix-files = "0.6.8"
actix-web = "4.11.0"
base64 = "0.22.1"
bson = { version = "2.15.0", features = ["chrono-0_4"] }
chrono = "0.4.42"
dotenvy = "0.15.7"
flexi_logger = "0.31.7"
lettre = { version = "0.11.18", features = ["builder", "smtp-transport", "tokio1", "tokio1-native-tls"] }
log = "0.4.28"
mongodb = "3.3.0"
rand = "0.8.5"
reqwest = "0.12.24"
rsa = "0.9.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serenity = "0.12.4"
strum = "0.27.2"
strum_macros = "0.27.2"
tera = "1.20.0"
tokio = "1.48.0"
regex = "1.12.2"
tokio-cron-scheduler = "0.15.0"
